--- a/code/001b_city_region_map.Rmd
+++ b/code/001b_city_region_map.Rmd
@@ -139,13 +139,6 @@ countryCode_region <- countryRegions %>%
   dplyr::select(1:REGION, Continent, continent, everything())
   
   
-shp <- SDGdetector::shp
-# mollweide_crs <- "+proj=moll +lon_0=0 +x_0=0 +y_0=0 +ellps=WGS84 +datum=WGS84 +units=m +no_defs"
-# robinson_crs  <- "+proj=robin +lon_0=0 +x_0=0 +y_0=0 +ellps=WGS84 +datum=WGS84 +units=m +no_defs"
-# shp <- sf::st_transform(shp, robinson_crs)
-
-
-
 func_add_region <- function(data) {
   d <- data %>%
     merge(x = ., 
@@ -212,13 +205,23 @@ func_ggsave(fname = fname, w = 7, h = 4, save_png = T)
 
 
 ```{r - region - map}
+
+shp <- SDGdetector::shp
+# mollweide_crs <- "+proj=moll +lon_0=0 +x_0=0 +y_0=0 +ellps=WGS84 +datum=WGS84 +units=m +no_defs"
+# robinson_crs  <- "+proj=robin +lon_0=0 +x_0=0 +y_0=0 +ellps=WGS84 +datum=WGS84 +units=m +no_defs"
+##' Define the McBryde-Thomas Flat-Polar Quartic projection
+##' https://map-projections.net/single-view/mcbryde-thomas-fp-quartic-interrupted
+# mcbtfpq_proj4string <- "+proj=mbtfpq +lat_0=0 +lon_0=0 +x_0=0 +y_0=0 +ellps=WGS84 +datum=WGS84 +units=m +no_defs"
+# shp <- sf::st_transform(shp, mcbtfpq_proj4string)
+
+
 region_count_sf <- region_count %>%
   merge(x= shp, y = ., by.x = 'iso_a3', by.y  = 'iso3c', all.x = T) 
 
 pub_byregion_map <- region_count_sf %>%
   dplyr::filter(name != 'Antarctica') %>%
   ggplot(.) +
-  geom_sf(aes(fill = n), size = 0.1, color = 'gray80') +
+  geom_sf(aes(fill = n), size = 0.05, color = 'gray80') +
   # geom_sf_text(aes(label = iso_a3), colour = "gray", size =1) + 
   scale_fill_distiller(name= '', palette = 'YlGnBu', direction = 1, na.value = "gray90") +
   
@@ -262,7 +265,7 @@ plot.with.inset
 
 
 fname <- paste0(dir.fig, 'pub_byYearRegion_map.png'); fname
-func_ggsave(fname = fname, w = 6.5, h = 2.8, save_png = T)
+func_ggsave(fname = fname, w = 6.5, h = 2.8, dpi = 600, save_png = T)
 ```
 
 
